--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -42,7 +42,7 @@
 
   <footer class="bg-gray-800 text-white py-8 mt-12">
     <div class="container mx-auto px-4 text-center text-gray-400">
-      © 2025 Карта России. Все права защищены.
+      © 2025 Полет БВС
     </div>
   </footer>
 </body>
