изменения в пароль и логин

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
       <nav>
         <ul class="flex space-x-6">
           <li><a href="{{ url_for('index') }}" class="text-gray-700 hover:text-blue-600 transition">Главная</a></li>
-          <li><a href="#" class="text-gray-700 hover:text-blue-600 transition">О проекте</a></li>
+          <li><a href="https://docs.google.com/presentation/d/1ys8HC41SEvZDcvZJheZCFXT_k4XoABs3HxmPITwQwdA/edit?slide=id.p8#slide=id.p8" class="text-gray-700 hover:text-blue-600 transition">О проекте</a></li>
 
           {% if username %}
             <li><a href="{{ url_for('auth.logout') }}" class="text-gray-700 hover:text-blue-600 transition">Выйти</a></li>
