--- a/templates/login.html
+++ b/templates/login.html
@@ -23,6 +23,12 @@
   <!-- Контент -->
   <main class="flex-grow container mx-auto px-4 py-16 flex justify-center items-center">
     <div class="bg-white shadow-md rounded-lg p-8 w-full max-w-md">
+      <div class="text-center mb-2 text-gray-600 text-sm">
+        Логин для входа: <span class="font-semibold">admin</span>
+      </div>
+      <div class="text-center mb-2 text-gray-600 text-sm">
+        Пароль для входа: <span class="font-semibold">qwerty</span>
+      </div>
       <h2 class="text-2xl font-bold text-center mb-6 text-blue-600">Вход</h2>
 
         {% if error %}
