--- a/templates/index.html
+++ b/templates/index.html
@@ -76,6 +76,7 @@
   </footer>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="{{ url_for('static', filename='functions.js') }}"></script>
   <script src="{{ url_for('static', filename='main.js') }}"></script>
 </body>
 </html>
